Fix overflow issue of the popup content in Firefox

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -4,6 +4,7 @@ body {
 	margin: 0;
 	display: flex;
 	flex-direction: column;
+	overflow: scroll;
 }
 
 .header {
